# cnc-port

./: .gitignore  CMakeLists.txt  NOTICE.md  README.md
.github/workflows/: macos-build.yml
CODE/: 2KEYFRAM.CPP  AIRCRAFT.CPP  AIRCRAFT.H  ANIM.CPP  ANIM.H  B64PIPE.CPP  B64PIPE.H  B64STRAW.CPP  B64STRAW.H  BAR.CPP  BAR.H  BASE64.CPP  BASE64.H  BENCH.CPP  BENCH.H  BFIOFILE.CPP  BFIOFILE.H  BIGCHECK.H  BLOWFISH.CPP  BLOWFISH.H  BLOWPIPE.CPP  BLOWPIPE.H  BLWSTRAW.CPP  BLWSTRAW.H  BMP8.H  BUFF.CPP  BUFF.H  BUFFERX.H  BUILDING.H  BULLET.H  CARRY.CPP  CARRY.H  CCDDE.H  CCFILE.CPP  CCINI.CPP  CCINI.H  CCMPATH.CPP  CCPTR.CPP  CCPTR.H  CCTEN.CPP  (+218 more)
CODE/WOLAPI/: CHATDEFS.H  DOWNLOADDEFS.H  FTPDEFS.H  NETUTILDEFS.H  WOLAPI.H
PORT/ANDROID/src/: android_main.cpp
PORT/IOS/src/: ios_app_delegate.m  ios_main.cpp
PORT/MAC/include/: bios.h  commlib.h  conio.h  ddraw.h  direct.h  dos.h  dsound.h  io.h  mac_sdl_runtime.h  malloc.h  mem.h  mmsystem.h  mobile_key_message.h  mobile_pan.h  mobile_rubber_band.h  mobile_touch_gesture.h  new.h  process.h  ra_aspect_viewport.h  share.h  windows.h
PORT/MAC/src/: ccdde_stub.cpp  dos_compat.cpp  legacy_ops.cpp  legacy_primitives.cpp  mac_audio_stub.cpp  mac_sdl_runtime.cpp  mac_timer.cpp  mac_vqa.cpp  main.cpp  tcpip_stub.cpp
VQ/INCLUDE/: WAVEFILE.H
VQ/INCLUDE/HMI32/: SOSDATA.H
VQ/INCLUDE/VQA32/: VQAFILE.H  VQAPLAY.H
VQ/INCLUDE/VQM32/: ALL.H  COMPRESS.H  CRC.H  FONT.H  GRAPHICS.H  HUFFMAN.H  IFF.H  MIXFILE.H  MONO.H  PALETTE.H  PORTIO.H  PROFILE.H  SOSCOMP.H  TARGA.H  TEXT.H  VESABLIT.H  VIDEO.H
VQ/INCLUDE/WWLIB32/: AUDIO.H  DIPTHONG.H  FILE.H  FONT.H  GBUFFER.H  IFF.H  KEYBOARD.H  KEYSTRUC.INC  MCGAPRIM.H  MCGAPRIM.INC  MEMFLAG.H  MISC.H  MONO.H  PALETTE.H  PLAYCD.H  SHAPE.H  SHAPE.INC  SOSDEFS.H  SOUND.H  STAMP.INC  TILE.H  TIMER.H  VIDEO.H  (+5 more)
WIN32LIB/AUDIO/: AUDIO.H  SOSFNCT.H  SOUND.H
WIN32LIB/DRAWBUFF/: BUFFER.CPP  BUFFER.H  BUFFGLBL.CPP  DRAWBUFF.INC  DRAWRECT.CPP  GBUFFER.CPP  GBUFFER.H  GBUFFER.INC  ICONCACH.CPP  ICONCACH.H  REGIONSZ.CPP
WIN32LIB/FONT/: FONT.CPP  FONT.H  LOADFONT.CPP  SET_FONT.CPP
WIN32LIB/IFF/: IFF.CPP  LOAD.CPP
WIN32LIB/INCLUDE/: AUDIO.H  DEFINES.H  DESCMGMT.H  DRAWBUFF.H  EXTERNS.H  FILE.H  FILEPCX.H  FILETEMP.H  GBUFFER.H  IFF.H  KEYBOARD.H  KEYBOARD.INC  KEYSTRUC.INC  MEMFLAG.H  MISC.H  MODEMREG.H  MOUSE.H  NYBBTB.INC  PROFILE.H  PROFILE.INC  RAWFILE.H  SHAPE.H  SHAPE.INC  SOSCOMP.H  SOSRES.H  SOUND.H  SOUNDINT.H  STAMP.INC  STRUCTS.H  TIMER.H  VIDEO.H  WINCOMM.H  WWFILE.H  WWLIB32.H  WWSTD.H  WW_WIN.H
WIN32LIB/KEYBOARD/: MOUSE.CPP
WIN32LIB/MEM/: ALLOC.CPP  MEM.CPP  WWMEM.H
WIN32LIB/MISC/: DDRAW.CPP  DELAY.CPP  EXIT.CPP  FINDARGV.CPP  IRANDOM.CPP  LIB.CPP  VERSION.CPP  WWLIB32.H  WWSTD.H
WIN32LIB/MONO/: MONO.H
WIN32LIB/PALETTE/: PALETTE.CPP  PALETTE.H
WIN32LIB/PLAYCD/: GETCD.CPP  PLAYCD.H
WIN32LIB/RAWFILE/: RAWFILE.H  WWFILE.H
WIN32LIB/SHAPE/: GETSHAPE.CPP  PRIOINIT.CPP
WIN32LIB/TILE/: ICONSET.CPP  TILE.H
WIN32LIB/TIMER/: TIMER.CPP  TIMER.H  TIMERDWN.CPP
WIN32LIB/WSA/: WSA.CPP  WSA.H  wsa_file_format.h
WINVQ/INCLUDE/: VOCFILE.H  VQ.H  VQFILE.H  WWTYPES.H
WWFLAT32/AUDIO/: AUDIO.H  INDEXTB.INC  SOSFNCT.H
WWFLAT32/FILE/: _FILE.H
WWFLAT32/IFF/: FILEPCX.H  IFF.H
WWFLAT32/INCLUDE/: DESCMGMT.H  DIFFTB.INC  FILE.H  FILETEMP.H  FONT.H  FUNCTION.H  GBUFFER.H  GBUFFER.INC  KEYBOARD.H  MCGAPRIM.INC  MEMFLAG.H  MISC.H  MONO.H  PALETTE.H  PLAYCD.H  SOSCOMP.H  SOUND.H  SOUNDINT.H  SVGAPRIM.INC  TIMER.H  VBUFFER.H  WINDOW.H  WSA.H  WWLIB32.H  WWSTD.H
WWFLAT32/MCGAPRIM/: BUFFER.H  GBUFFER.H  MCGAPRIM.H  STAMP.INC
WWFLAT32/MISC/: MISC.H  WWSTD.H
WWFLAT32/TILE/: TILE.H
WWFLAT32/TIMER/: TIMER.H
WWFLAT32/VIDEO/: VIDEO.H
WWFLAT32/WINDOWS/: WINDOWS.H
android/: gradle.properties  settings.gradle.kts
android/app/: CMakeLists.txt  build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/cncport/cnc/: CncActivity.java
android/app/src/main/res/values/: styles.xml
cmake/: cnc95_common.cmake  cnc95_sources.cmake
ios/: CMakeLists.txt  Info.plist.in
scripts/: build_android_debug.sh  build_ios_debug.sh  prepare_assets_from_local.sh  run_android_debug.sh  run_ios_simulator.sh  run_mac_dev.sh  smoke_mac_menu.sh
tests/: aspect_viewport_test.cpp  audio_shim_test.cpp  cnc_asset_compat_test.sh  coord_cell_test.cpp  cps_uncompress_test.cpp  ddraw_shim_test.cpp  dos_compat_test.cpp  facing_wrap_test.cpp  fixed_endian_test.cpp  input_shim_test.cpp  keyframe_decode_test.cpp  mobile_key_message_test.cpp  mobile_pan_test.cpp  mobile_rubber_band_test.cpp  mobile_touch_gesture_test.cpp  move_point_direction_oob_test.cpp  radar_icon_offset_width_test.cpp  run_script_tests.sh  shape_cache_capacity_test.cpp  shape_extract_test.cpp  timer_shim_test.cpp  vqa_decode_test.cpp  vqa_file_smoke_test.cpp  wsa_buffer_layout_test.cpp  wsa_file_format_test.cpp
(+37 files in other folders)
